--- a/joey-photo/package.json
+++ b/joey-photo/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.17",
+    "react-router-dom": "^6.14.1",
     "flowbite": "^4.0.0",
     "flowbite-react": "^0.12.10",
     "react": "^19.2.0",
