--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          server: ftp.cluster100.hosting.ovh.net
-          username: lescley
+          server: ftp.cluster121.hosting.ovh.net
+          username: grassyi
           password: ${{ secrets.ftp_password }}
           exclude: |
             **/.git*
